--- a/src/Components/customstyle.css
+++ b/src/Components/customstyle.css
@@ -200,22 +200,26 @@ td {
 .purchase-order-table button {
     margin-top: 10px;
 }
+
 .addProduct {
     color: blue;
-   padding-top: 10px;
+    padding-top: 10px;
     padding-left: 90%;
     font-weight: 2.5rem;
 }
+
 #language {
     display: flex;
     text-align: center;
     justify-content: center;
 }
+
 .detail-row {
     display: flex;
     margin-top: 10%;
     margin-bottom: 10%;
 }
+
 /* confirm Order */
 .Order {
     margin-left: 30%;
@@ -224,38 +228,85 @@ td {
     background-color: #f5f5f5;
     color: #000000;
 }
+
 #order-value {
     margin-left: 5%;
     margin-top: 2%;
 }
+
 .buttonOrder {
     margin-left: 50px;
 }
+
 .problem {
     margin-top: 20px;
     margin-left: 5%;
 }
+
 .query-input {
     margin-top: 20px;
     margin-left: 5%;
     width: 300px;
 }
+
 .querybutton {
     margin-top: 10px;
     width: 80px;
     height: 35px;
 }
+
 /* for the images */
-.circule {  
+.circule {
     height: 150px;
     width: 200px;
     background-image: url("../images/circule.jpg");
     background-size: cover;
 }
+
 .graph {
     margin-top: 5%;
     height: 150px;
     width: 200px;
     background-image: url("../images/graph.jpg");
     background-size: cover;
+}
+
+/* This is for Purchase history */
+.container {
+    margin-top: 50px;
+}
+
+.table-responsive {
+    overflow-x: auto;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+th,
+td {
+    padding: 12px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+    border-bottom: 2px solid #ddd;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
